2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Services/GettextCatalog.cs: moved to .Core.
	* Makefile.am: reflect above change.

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Services/File/DefaultFileService.cs:
	* Services/ResourceNotFoundException.cs:
	* Services/DisplayBinding/DisplayBindingService.cs:
	* Services/Project/DefaultProjectService.cs:
	* Services/StatusBar/DefaultStatusBarService.cs:
	* Services/MessageService.cs:
	* Services/ParserService/DefaultParserService.cs:
	Finished gettextifyin the base dll.

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ProjectBrowser/BrowserNode/NamedFolderNode.cs:
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
	phantom commit, no one saw this

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Commands/RunCommands.cs:
	* Commands/FileCommands.cs:
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
	* Internal/ExternalTool/ExternalTool.cs:
	* Internal/ExternalTool/ToolLoader.cs:
	* Internal/Project/Project/Deployment/FileDeploy.cs:
	* Internal/Project/Project/Deployment/AssemblyDeploy.cs:
	* Internal/Project/Project/Deployment/ScriptDeploy.cs:
	* Internal/Project/Project/IncludeFilesDialog.cs:
	* Internal/Project/Project/AbstractProject.cs:
	* Internal/Project/Combine/Combine.cs:
	* Internal/Project/Combine/CombineEntry.cs:
	* Internal/Templates/FileTemplate.cs:
	* Internal/Templates/CodeTemplateLoader.cs:
	* Internal/Templates/ProjectTemplates/CombineDescriptor.cs:
	* Internal/Templates/ProjectTemplates/ProjectDescriptor.cs:
	gettextify, and actually COMPILE it before checking in this time...

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Commands/MenuItemBuilders.cs:
	* Commands/RunCommands.cs:
	* Commands/ClassBrowserCommands/ClassBrowserCommands.cs:
	* Commands/ProjectCommands.cs:
	* Commands/ProjectBrowserCommands/ResourceFolderNodeCommands.cs:
	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: